# smart-clock

./: .gitmodules  readme.md
firmware/: CMakeLists.txt  diagram.json  wokwi.toml
firmware/src/: event_dispatch.c  event_dispatch.h  main.c
firmware/src/hardware_platform/: hardware_platform.c  hardware_platform.h  pin_definitions.h
firmware/src/hardware_platform/drivers/: dht22.c  dht22.h  led.c  led.h  piezo_buzzer.c  piezo_buzzer.h
smart-clock/: .gitignore  smart-clock.kicad_pro  smart-clock.kicad_sch  sym-lib-table
